added domain model selection panel
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk@4908 dd7b0c16-3c94-4492-92de-414b6a06f0b1